# RAG-proj

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  docker-compose.yml  ingest.py  pyproject.toml
src/: config.py  graph.py  ingestion.py  models.py  retriever.py
